base/src/test/resources/failure/levels/too-many-levels.aya.txt
In file $FILE:2:17 ->

  1 | universe u
  2 | struct Lift (A : Prop u) : Prop (lsuc u)
                       ^--^
  3 |  | value : A

Error: The name `Prop` is not defined in the current scope

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
